--- a/decoder/package.json
+++ b/decoder/package.json
@@ -12,7 +12,10 @@
     "johnny-five": "^0.7.30",
     "socket.io": "^0.9.16",
     "lodash": "^2.4.1",
-    "brain": "^0.6.3"
+    "brain": "^0.6.3",
+    "commander": "^2.2.0",
+    "chalk": "^0.4.0",
+    "prompt": "^0.2.12"
   },
   "devDependencies": {
     "docco": "^0.6.3"
