--- a/encoder/package.json
+++ b/encoder/package.json
@@ -21,6 +21,7 @@
   "homepage": "https://github.com/martinez-zea/face-encoder",
   "dependencies": {
     "opencv": "^0.5.0",
-    "gm": "^1.14.2"
+    "gm": "^1.14.2",
+    "commander": "~2.2.0"
   }
 }
