--- a/encoder/package.json
+++ b/encoder/package.json
@@ -25,6 +25,8 @@
     "commander": "~2.2.0",
     "chalk": "^0.4.0",
     "pngjs": "^0.4.0",
-    "node-simple-router": "^0.8.8-3"
+    "node-simple-router": "^0.8.8-3",
+    "handlebars": "^2.0.0-alpha.2",
+    "lodash": "^2.4.1"
   }
 }
