--- a/encoder/bower.json
+++ b/encoder/bower.json
@@ -19,5 +19,10 @@
     "vendor",
     "test",
     "tests"
-  ]
+  ],
+  "dependencies": {
+    "jquery-steps": "https://github.com/rstaib/jquery-steps.git#~1.0.4",
+    "jquery": "~2.1.0",
+    "bootstrap": "~3.1.1"
+  }
 }
