--- a/encoder/package.json
+++ b/encoder/package.json
@@ -27,6 +27,8 @@
     "pngjs": "^0.4.0",
     "node-simple-router": "^0.8.8-3",
     "handlebars": "^2.0.0-alpha.2",
-    "lodash": "^2.4.1"
+    "lodash": "^2.4.1",
+    "i18next": "^1.7.1",
+    "nodemailer": "^0.6.2"
   }
 }
