--- a/decoder/package.json
+++ b/decoder/package.json
@@ -15,7 +15,10 @@
     "brain": "^0.6.3",
     "commander": "^2.2.0",
     "chalk": "^0.4.0",
-    "prompt": "^0.2.12"
+    "prompt": "^0.2.12",
+    "node-simple-router": "^0.8.8-3",
+    "handlebars": "^2.0.0-alpha.2",
+    "i18next": "^1.7.1"
   },
   "devDependencies": {
     "docco": "^0.6.3"
