--- a/encoder/package.json
+++ b/encoder/package.json
@@ -29,6 +29,7 @@
     "handlebars": "^2.0.0-alpha.2",
     "lodash": "^2.4.1",
     "i18next": "^1.7.1",
-    "nodemailer": "^0.6.2"
+    "nodemailer": "^0.6.2",
+    "raspicam": "~0.2.13"
   }
 }
