--- a/encoder/package.json
+++ b/encoder/package.json
@@ -30,6 +30,7 @@
     "lodash": "^2.4.1",
     "i18next": "^1.7.1",
     "nodemailer": "^0.6.2",
-    "raspicam": "~0.2.13"
+    "raspicam": "~0.2.13",
+    "moment": "~2.6.0"
   }
 }
