users stored on database

--- a/encoder/package.json
+++ b/encoder/package.json
@@ -31,6 +31,7 @@
     "i18next": "^1.7.1",
     "nodemailer": "^0.6.2",
     "raspicam": "~0.2.13",
-    "moment": "~2.6.0"
+    "moment": "~2.6.0",
+    "nedb": "~0.10.5"
   }
 }
