--- a/encoder/package.json
+++ b/encoder/package.json
@@ -33,5 +33,10 @@
     "raspicam": "~0.2.13",
     "moment": "~2.6.0",
     "nedb": "~0.10.5"
+  },
+  "devDependencies": {
+    "grunt": "~0.4.4",
+    "grunt-contrib-less": "~0.11.0",
+    "grunt-contrib-watch": "~0.6.1"
   }
 }
