--- a/encoder/package.json
+++ b/encoder/package.json
@@ -32,7 +32,8 @@
     "nodemailer": "^0.6.2",
     "raspicam": "~0.2.13",
     "moment": "~2.6.0",
-    "nedb": "~0.10.5"
+    "nedb": "~0.10.5",
+    "socket.io": "~0.9.16"
   },
   "devDependencies": {
     "grunt": "~0.4.4",
