--- a/encoder/bower.json
+++ b/encoder/bower.json
@@ -23,6 +23,8 @@
   "dependencies": {
     "jquery-steps": "https://github.com/rstaib/jquery-steps.git#~1.0.4",
     "jquery": "~2.1.0",
-    "bootstrap": "~3.1.1"
+    "bootstrap": "~3.1.1",
+    "jquery-timer": "https://github.com/jchavannes/jquery-timer.git",
+    "jquery-color": "https://github.com/jquery/jquery-color.git#~2.1.2"
   }
 }
