write svg to disc

--- a/encoder/package.json
+++ b/encoder/package.json
@@ -33,7 +33,8 @@
     "raspicam": "~0.2.13",
     "moment": "~2.6.0",
     "nedb": "~0.10.5",
-    "socket.io": "~0.9.16"
+    "socket.io": "~0.9.16",
+    "paths-js": "~0.2.3"
   },
   "devDependencies": {
     "grunt": "~0.4.4",
