--- a/decoder/bower.json
+++ b/decoder/bower.json
@@ -19,6 +19,9 @@
   ],
   "dependencies": {
     "jquery": "~2.1.0",
-    "backbone": "~1.1.2"
+    "backbone": "~1.1.2",
+    "bootstrap": "~3.1.1",
+    "spin.js": "~2.0.0",
+    "lodash": "~2.4.1"
   }
 }
