--- a/decoder/package.json
+++ b/decoder/package.json
@@ -21,6 +21,9 @@
     "i18next": "^1.7.1"
   },
   "devDependencies": {
-    "docco": "^0.6.3"
+    "docco": "^0.6.3",
+    "grunt": "~0.4.4",
+    "grunt-contrib-less": "~0.11.0",
+    "grunt-contrib-watch": "~0.6.1"
   }
 }
