--- a/decoder/bower.json
+++ b/decoder/bower.json
@@ -22,6 +22,7 @@
     "backbone": "~1.1.2",
     "bootstrap": "~3.1.1",
     "spin.js": "~2.0.0",
-    "lodash": "~2.4.1"
+    "lodash": "~2.4.1",
+    "bxslider-4": "~4.1.2"
   }
 }
