--- a/decoder/package.json
+++ b/decoder/package.json
@@ -18,7 +18,8 @@
     "prompt": "^0.2.12",
     "node-simple-router": "^0.8.8-3",
     "handlebars": "^2.0.0-alpha.2",
-    "i18next": "^1.7.1"
+    "i18next": "^1.7.1",
+    "moment": "~2.6.0"
   },
   "devDependencies": {
     "docco": "^0.6.3",
